@@ -29,12 +29,18 @@
 
    <h3>Folder commands</h3>
 
+   <p>The following shortcuts are available from the main Thunderbird's window.
+   </p>
+
    <table border="1">
     <tr><th>Shortcut</th><th>Description</th></tr>
     <tr><td>G</td><td>Open a specific folder</td></tr>
     <tr><td>S</td><td>Move the current message to a specific folder</td></tr>
     <tr><td>C</td><td>Copy the current message to a specific folder</td></tr>
    </table>
+
+   <p><b>Important:</b> even if the key shortcuts above are written in
+uppercase, you don't need to press Shift.</p>
 
    <p>As a remainder and a sign of Nostalgy's presence, these shortcuts are 
       displayed in Thunderbird's status bar.</p>
@@ -82,7 +88,8 @@
     <tr><td>Esc-F</td><td>Focus the folder pane</td></tr>
     <tr><td>Esc-M</td><td>Focus the message pane</td></tr>
     <tr><td>Esc-Esc</td><td>Focus the thread pane</td></tr>
-    <tr><td>Esc-S</td><td>Focus the quick search box</td></tr>
+    <tr><td>Esc-Esc-Esc</td><td>Focus the thread pane, clear quick search box</td></tr>
+    <tr><td>Esc-I</td><td>Focus the quick search box</td></tr>
     <tr><td>Ctrl-Left/Right</td>
          <td>Scroll the message from the thread pane</td></tr>
    </table>
@@ -115,12 +122,21 @@
    it is global.
    </p>
 
-   <h3>Auto-completion</h3>
- 
+   <h3>In the Composer</h3>
+
+   <p>Nostalgy adds some support for keyboard operations to the Composer window.</p>
+
+   <p>When typing in a header, it's possible to change easily the header
+to either "To:" or "Cc:". To do so, you need to be at the beginning
+of the input box, and simply type "to " or "cc " (with the whitespace,
+without the quotes).</p>
+
+   <p>The Esc-Esc combination focuses the message body.</p>
+
    <h3>Preferences</h3>
    
    <p>The preference dialog for Nostalgy is the place where rules are
-   defined. In addition, four switches control the way the completion
+   defined. In addition, five switches control the way the completion
    box (where folder names are proposed) is populated.</p>
 
    <p>The first switch restricts the lookup to folders on the same
@@ -142,7 +158,12 @@
    <p>The fourth switch controls whether folder names are matched
    in a case sensitive or insensitive way.</p>
 
-   <h3>About Nostalgy...</h3>
+   <p>The fifth switch controls whether the Tab key triggers shell-like
+      completion. If it is unchecked, Tab simply cycles through suggestions,
+      like the down arrow key.</p>
+
+   <hr/>
+
    <p>The Nostalgy extension has been written by Alain Frisch (<tt>Alain.Frisch@inria.fr</tt>). Comments ands suggestions are welcome!</p>
   </body>
 </html>
